--- a/public/assets/package.json
+++ b/public/assets/package.json
@@ -14,6 +14,7 @@
     "jquery": "3.2.1",
     "mdi": "2.0.46",
     "popper.js": "^1.12.3",
+    "purple-admin": "^1.0.0",
     "tether": "^1.4.3",
     "toastr": "^2.1.4"
   },
